# kx-cpp

./: .gitignore  Cargo.toml  README.md  gen.py  meson.build
.github/workflows/: build.yml
apps/app01/: Cargo.toml
demos/bike-race-game/: meson.build
demos/bike-race-game/include/bike_race/: init.h  menu.h
demos/bike-race-game/src/: main.cpp
include/kx/: time.hpp
include/kx/gui/: gadget.hpp  input_map.hpp
include/kx/input/: input.hpp  input_map.hpp
include/kx/rend/: renderer_fwd.hpp
include/kx/state/: state.hpp  state_factory.hpp  state_factory_fwd.hpp  state_fwd.hpp  state_manager.hpp
include/kx/view/: context.hpp  layered_position.hpp  layered_view.hpp  rectangle.hpp  view.hpp
src/view/: context.cpp  position.cpp  template.cpp
subprojects/kx_rend/: Cargo.toml
subprojects/kx_rend/src/: lib.rs
subprojects/kx_state/: Cargo.toml
subprojects/kx_state/src/: lib.rs
subprojects/kx_time/: Cargo.toml
subprojects/kx_time/src/: lib.rs
subprojects/kx_view/: Cargo.toml
subprojects/kx_view/src/: lib.rs  view.rs
subprojects/kxgui/: input_map.cpp  meson.build
subprojects/kxinput/: input.cpp  input_map.cpp  meson.build
subprojects/kxstate/: meson.build  state.cpp  state_manager.cpp
subprojects/kxstate/include/state/: state.hpp  state_manager.hpp
subprojects/kxview/: layered_view.cpp  meson.build  rectangle.cpp  view.cpp
subprojects/kxview/include/view/: position.hpp  types.hpp
